# doacoes_cv

doacoes_cv_backend/: db.sqlite3  manage.py  pyproject.toml
doacoes_cv_backend/doacoes_cv/: asgi.py  settings.py  urls.py  wsgi.py
