[tool.poetry]
name = "doacoes-cv"
version = "0.1.0"
description = "Um aplicativo inovador de doações que conecta doadores a causas necessitadas, facilitando a contribuição e a transformação de vidas."
authors = ["Adhenrique12 <adeliofonseca.lord@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
django-cors-headers = "^4.6.0"
djangorestframework-simplejwt = "^5.3.1"
pyjwt = "^2.9.0"
pytz = "^2024.2"
sqlparse = "^0.5.2"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
